# shtRipper

./: CMakeLists.txt  README.md  example.py  ripper.py  setup.py  version.h
docs/: sht_file.docx
python/: example.py  niifaRipper.py  niifa_example.py  ripper.py
shtRipper/: __init__.py  example.py  niifaRipper.py  niifa_example.py  shtRipper.py
src/: niifaFile.cpp  niifaFile.h  tester.cpp
